fixed mobile menu cut off on landscape

--- a/public/css/habits.css
+++ b/public/css/habits.css
@@ -27,6 +27,9 @@
  /*************** NAV SECTION ***************/
  nav {
     position: fixed;
+    z-index: 10;
+    top: 0;
+    left: 0;
     background: #F9FAFB;
     display: flex;
     justify-content: center;
@@ -120,7 +123,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 88.5%;
+    height: calc(100% - 85px);
     display: none;
     overflow: hidden;
     align-items: center;
