--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -33,6 +33,8 @@
 nav {
    position: fixed;
    top: 0;
+   left: 0;
+   z-index: 1;
    background: #F9FAFB;
    display: flex;
    justify-content: center;
@@ -113,7 +115,7 @@ nav {
    bottom: 0;
    left: 0;
    width: 100%;
-   height: 88.5%;
+   height: calc(100% - 85px);
    display: none;
    overflow: hidden;
    align-items: center;
